# ocamlchess

./: .gitignore  .ocamlformat  Makefile  README.md  chess.opam
chess/: Makefile  dune-project  ocamlchess.opam
chess/src/: bitboard.ml  bitboard.mli  book.ml  book.mli  bytes_stubs.c  castling_rights.ml  castling_rights.mli  choose_player.ml  choose_player.mli  dune  eval.ml  eval.mli  game.ml  game.mli  int64_stubs.c  int64_stubs.cpp  move.ml  move.mli  move_ordering.ml  move_ordering.mli  piece.ml  piece.mli  player.ml  player.mli  player_intf.ml  position.ml  position.mli  precalculated.ml  precalculated.mli  search.ml  search.mli  see.ml  see.mli  square.ml  square.mli  uci.ml  uci.mli  utils.ml  utils.mli  zobrist.ml  (+1 more)
chess/src/eval/: eval.ml  eval.mli  eval_bishop.ml  eval_closedness.ml  eval_common.ml  eval_complexity.ml  eval_info.ml  eval_king.ml  eval_knight.ml  eval_main.ml  eval_material.ml  eval_passed.ml  eval_pawn.ml  eval_pawn_king.ml  eval_phase.ml  eval_pkcache.ml  eval_psqt.ml  eval_queen.ml  eval_rook.ml  eval_safety.ml  eval_scale.ml  eval_score.ml  eval_space.ml  eval_threat.ml
chess/src/player/: README.md  player_cccp.ml  player_cccp.mli  player_huddle.ml  player_huddle.mli  player_maximize_opponent_moves.ml  player_maximize_opponent_moves.mli  player_minimize_opponent_moves.ml  player_minimize_opponent_moves.mli  player_opposite_color.ml  player_opposite_color.mli  player_pacifist.ml  player_pacifist.mli  player_random.ml  player_random.mli  player_same_color.ml  player_same_color.mli  player_suicide_king.ml  player_suicide_king.mli  player_swarm.ml  player_swarm.mli
chess/src/position/: position.ml  position.mli  position_analysis.ml  position_attacks.ml  position_child.ml  position_common.ml  position_comparable.ml  position_fen.ml  position_hash.ml  position_histogram.ml  position_makemove.ml  position_movegen.ml  position_movegen_helpers.ml  position_san.ml  position_see.ml  position_threats.ml  position_unsafe.ml  position_valid.ml
chess/src/precalculated/: precalculated.ml  precalculated.mli  precalculated_between.ml  precalculated_castle.ml  precalculated_common.ml  precalculated_connected_pawns.ml  precalculated_forward_files.ml  precalculated_forward_ranks.ml  precalculated_king_area.ml  precalculated_king_pawn_file_distance.ml  precalculated_line.ml  precalculated_magic.ml  precalculated_mask.ml  precalculated_mvv_lva.ml  precalculated_outpost_ranks.ml  (+6 more)
chess/test/: dune  test_bitboard.ml  test_check.ml  test_fen.ml  test_move.ml  test_perft.ml  test_precalculated.ml  test_see.ml  test_threats.ml  test_uci.ml  test_zobrist.ml
src/: bitboard.ml  (+24 more)
(+41 files in other folders)
