opam-version: "2.1.0"
version: "0.1"
maintainer: "Benjamin_Mourad@student.uml.edu"
authors: ["Benjamin Mourad"]
license: "GPLv3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core" {>= "0.14.2"}
  "dune" {>= "2.9.1"}
  "monads"
  "ocaml" {>= "4.09"}
  "ounit2"
  "ppx_compare"
  "ppx_fields_conv"
  "ppx_hash"
  "ppx_sexp_conv"
]
