(library
 (name chess)
 (public_name ocamlchess)
 (libraries core_kernel monads)
 (foreign_stubs
  (language cxx)
  (names int64_stubs)
  (flags -march=native -fPIC))
 (ocamlopt_flags -O3)
 (preprocess (pps ppx_compare
                  ppx_fields_conv
                  ppx_hash
                  ppx_sexp_conv)))
