(library
 (name chess)
 (public_name ocamlchess)
 (flags -w -58)
 (libraries
   core_kernel
   core_kernel.uopt
   bap-future
   monads)
 (foreign_stubs
  (language c)
  (names bytes_stubs int64_stubs)
  (flags -march=native))
 (ocamlopt_flags -O3)
 (preprocess (pps ppx_compare
                  ppx_fields_conv
                  ppx_hash
                  ppx_sexp_conv)))
